[gd_scene load_steps=3 format=3 uid="uid://b082ttjbulmjw"]

[ext_resource type="Script" uid="uid://cpur8qdhe6i4j" path="res://UI/LoadoutSelectionScreen/LoadoutSelection/loadout_selection.gd" id="1_clmff"]
[ext_resource type="Texture2D" uid="uid://dl04ctaiyxdpc" path="res://Art/Weapons/aura_bullet.png" id="2_nytwv"]

[node name="LoadoutSelection" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_clmff")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="LoadoutImage" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_nytwv")
expand_mode = 1

[node name="ModGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/LoadoutImage"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 3

[node name="LoadoutButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SELECT
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadoutButton" to="." method="_on_loadout_button_pressed"]
